--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,10 +25,10 @@
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= render partial: 'prototypes/prototype', collection: @prototype %>
+        <%= "#{@user.name}さんのプロトタイプ"%>
       </h2>
       <div class="user__card">
-        <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
+        <%= render partial: "prototypes/prototype", collection: @prototypes %>
       </div>
     </div>
   </div>
