--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -12,7 +12,7 @@
         </div>
       <% end %>
       <div class="prototype__image">
-        <%= image_tag "logo.png" %>
+        <%= image_tag(@prototype.image) %>
       </div>
       <div class="prototype__body">
         <div class="prototype__detail">
